# NeuralNetworkFromScratch

./: README.md  data.py  nn.py  pyproject.toml
